src/app/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  transition: .25s ease;
  font-family: '__Poppins_b041e5';
}

a {
  color: inherit;
  text-decoration: none;
}

li {
  list-style: none;
}

button {
  background: unset;
  border: unset;
  outline: unset;
  stroke: unset;
}

.container {
  max-width: calc(1640px + 80px);
  padding: 0 40px;
  margin: 0 auto;
  position: relative;
  z-index: 1;
  width: 100%;
}

html::-webkit-scrollbar {
  width: 8px;
}

html::-webkit-scrollbar-thumb {
  background-color: #E31E6F;
  border: 3px solid #fff;
  border-radius: 8px;
}

@media (max-width: 800px) {
  .container {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@keyframes sizeGrown {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(1.1);
  }  
}

@keyframes animloader {
  0% {
    transform: scale(0);
    opacity: 1;
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}

